--- a/integradora/index.html
+++ b/integradora/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>inicio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
-    <form action="" style="display: grid; grid-template-columns: 1fr; gap: 10px;">
-        <h1>Iniciar Sesión</h1>
-        <input type="text" placeholder="Usuario">
-        <input type="text" placeholder="Contraseña">
-        <button>Entrar</button>
+    <form id="formulario1">
+        <h2 class="fuente">Iniciar sesión</h2>
+        <input class="sesion" type="text" placeholder="Usuario">
+        <input class="sesion" type="text" placeholder="Contraseña">
+        <button class="boton">ingresar</button>
     </form>
 </body>
 </html>
