--- a/integradora/index.html
+++ b/integradora/index.html
@@ -11,7 +11,7 @@
     <form id="formulario1">
         <h2 class="fuente">Iniciar sesión</h2>
         <input class="sesion" type="text" placeholder="Usuario">
-        <input class="sesion" type="text" placeholder="Contraseña">
+        <input class="sesion" type="password" placeholder="Contraseña">
         <button class="boton">ingresar</button>
     </form>
 </body>
