actualización tablas-contenido

--- a/integradora/resourses/admin_gph.html
+++ b/integradora/resourses/admin_gph.html
@@ -16,11 +16,11 @@
                 <span class="material-symbols-outlined">query_stats</span>
                 <span class="tooltip">estadísticas</span>
                 </a></li>
-            <li><a href="#" class="lateral">
+            <li><a href="productos.html" class="lateral">
                 <span class="material-symbols-outlined">inventory</span>
                 <span class="tooltip">Productos</span>
             </a></li>
-            <li><a href="#" class="lateral">
+            <li><a href="empleados.html" class="lateral">
                 <span class="material-symbols-outlined">person</span>
                 <span class="tooltip">Empleados</span>
             </a></li>
