ahora si (actualizacion adaptabilidad de tablas)

--- a/integradora/resourses/empleados.html
+++ b/integradora/resourses/empleados.html
@@ -58,8 +58,8 @@
                 <td>6131131232</td>
                 <td class="positive">activo</td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
             </tr>
             <tr>
@@ -70,8 +70,8 @@
                 <td>6131131232</td>
                 <td class="negative">inactivo</td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
             </tr>
         </table>
