--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -64,8 +64,8 @@
                 <td>100.00</td>
                 <td class="positive"><li>existente</li></td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
              </tr>
              <tr>
@@ -76,8 +76,8 @@
                 <td>100.001</td>
                 <td class="negative"><li>agotado</li></td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
             </tr>
             <tr>
@@ -88,8 +88,8 @@
                 <td>100.001</td>
                 <td class="negative"><li>agotado</li></td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
             </tr>
             <tr>
@@ -100,8 +100,8 @@
                 <td>100.001</td>
                 <td class="negative"><li>agotado</li></td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
             </tr>
             <tr>
@@ -112,8 +112,8 @@
                 <td>100.001</td>
                 <td class="negative"><li>agotado</li></td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
             </tr>
             <tr>
@@ -124,8 +124,8 @@
                 <td>100.001</td>
                 <td class="negative"><li>agotado</li></td>
                 <td class="acciones">
-                    <button class="B_editar">editar</button>
-                    <button class="B_eliminar">eliminar</button>
+                    <button class="B_editar"><span class="material-symbols-outlined">edit</span></button>
+                    <button class="B_eliminar"><span class="material-symbols-outlined">delete</span></button>
                 </td>
             </tr>
         </table>
