prototipo tablas final diseño y cambios

--- a/integradora/resourses/admin_gph.html
+++ b/integradora/resourses/admin_gph.html
@@ -24,11 +24,14 @@
                 <span class="material-symbols-outlined">person</span>
                 <span class="tooltip">Empleados</span>
             </a></li>
-            <li><a href="#" class="lateral">
-                <span class="material-symbols-outlined">map</span>
-                <span class="tooltip">direcciones</span>
+            <li><a href="clientes.html" class="lateral">
+                <span class="material-symbols-outlined">groups</span>
+                <span class="tooltip">Clientes</span>
             </a></li>
-            
+            <li><a href="zonas.html" class="lateral">
+                <span class="material-symbols-outlined">map</span>
+                <span class="tooltip">Zonas</span>
+            </a></li>
         </ul>
         </nav>
     </aside>
