--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -26,9 +26,13 @@
                 <span class="material-symbols-outlined">person</span>
                 <span class="tooltip">Empleados</span>
             </a></li>
-            <li><a href="#" class="lateral">
+            <li><a href="clientes.html" class="lateral">
+                <span class="material-symbols-outlined">groups</span>
+                <span class="tooltip">Clientes</span>
+            </a></li>
+            <li><a href="zonas.html" class="lateral">
                 <span class="material-symbols-outlined">map</span>
-                <span class="tooltip">direcciones</span>
+                <span class="tooltip">Zonas</span>
             </a></li>
         </ul>
         </nav>
@@ -37,7 +41,9 @@
         
         <form action="" id="busquedas">
             <h2>Productos</h2>
-            <input type="button" class="bot" value="nuevo" >
+            <button class="bot"><span class="material-symbols-outlined">
+                add_circle
+                </span> Añadir</button>
             <select class="js-example-basic-single" name="state">
                 <option value="" selected disabled>categoría</option>
                 <option value="AL">Alabama</option>
