--- a/integradora/index.html
+++ b/integradora/index.html
@@ -8,11 +8,12 @@
 
 </head>
 <body>
-    <form id="formulario1">
+    <form id="login">
         <h2 class="fuente">Iniciar sesión</h2>
-        <input class="sesion" type="text" placeholder="Usuario">
-        <input class="sesion" type="password" placeholder="Contraseña">
-        <button class="boton">ingresar</button>
+        <input class="sesion" type="text" placeholder="🙍‍♂️Usuario">
+        <input class="sesion" type="password" placeholder="🔒Contraseña">
+        <input type="submit" class="boton" value="ingresar">
+        <a href="">haz olvidado tu contraseña?</a>
     </form>
 </body>
 </html>
