--- a/integradora/resourses/empleados.html
+++ b/integradora/resourses/empleados.html
@@ -25,9 +25,13 @@
                     <span class="material-symbols-outlined">person</span>
                     <span class="tooltip">Empleados</span>
                 </a></li>
-                <li><a href="#" class="lateral">
+                <li><a href="clientes.html" class="lateral">
+                    <span class="material-symbols-outlined">groups</span>
+                    <span class="tooltip">Clientes</span>
+                </a></li>
+                <li><a href="zonas.html" class="lateral">
                     <span class="material-symbols-outlined">map</span>
-                    <span class="tooltip">direcciones</span>
+                    <span class="tooltip">Zonas</span>
                 </a></li>
             </ul>
             </nav>
@@ -36,6 +40,9 @@
             
             <form action="" id="busquedas">
                 <h2>Empleados</h2>
+                <button class="bot"><span class="material-symbols-outlined">
+                    add_circle
+                    </span> Añadir</button>
                 <input id="Search_principal" type="search" placeholder="Buscar">
                 <input id="Bot_busqueda" class="bot" type="submit" value="buscar">
             </form>
