--- a/integradora/index.html
+++ b/integradora/index.html
@@ -10,8 +10,8 @@
 <body>
     <form id="login">
         <h2 class="fuente">Iniciar sesión</h2>
-        <input class="sesion" type="text" placeholder="🙍‍♂️Usuario">
-        <input class="sesion" type="password" placeholder="🔒Contraseña">
+        <input class="sesion" type="text" placeholder="Usuario">
+        <input class="sesion" type="password" placeholder="Contraseña">
         <input type="submit" class="boton" value="ingresar">
         <a href="">haz olvidado tu contraseña?</a>
     </form>
