--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -44,13 +44,15 @@
             <button class="bot"><span class="material-symbols-outlined">
                 add_circle
                 </span> Añadir</button>
-            <select class="js-example-basic-single" name="state">
-                <option value="" selected disabled>categoría</option>
-                <option value="AL">Alabama</option>
-                <option value="WY">Wyoming</option>
-            </select>
-            <input id="Search_principal" type="search" placeholder="Buscar">
-            <input id="Bot_busqueda"  class="bot" type="submit" value="buscar">
+            <div id="barra_busqueda">
+                <select class="js-example-basic-single" name="state">
+                    <option value="" selected disabled>categoría</option>
+                    <option value="AL">Alabama</option>
+                    <option value="WY">Wyoming</option>
+                </select>
+                <input id="Search_principal" type="search" placeholder="Buscar">
+                <input id="Bot_busqueda"  class="botS" type="submit" value="buscar">
+            </div>
         </form>
         <table>
             <thead>
