--- a/integradora/resourses/clientes.html
+++ b/integradora/resourses/clientes.html
@@ -43,8 +43,10 @@
             <button class="bot"><span class="material-symbols-outlined">
                 add_circle
                 </span> Añadir</button>
-            <input id="Search_principal" type="search" placeholder="Buscar">
-            <input id="Bot_busqueda"  class="bot" type="submit" value="buscar">
+                <div id="barra_busqueda">
+                    <input id="Search_principal" type="search" placeholder="Buscar">
+                    <input id="Bot_busqueda"  class="botS" type="submit" value="buscar">
+                </div>
         </form>
 
         <table>
