--- a/integradora/resourses/admin_gph.html
+++ b/integradora/resourses/admin_gph.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <aside>
-        <img src="#" alt="logotipo">
+        <!--<img src="#" alt="logotipo"> -->
         <nav>
         <ul>
             <li><a href="#" class="lateral selected">
