--- a/integradora/resourses/clientes.html
+++ b/integradora/resourses/clientes.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../styles/lateral.css">
     <link rel="stylesheet" href="../styles/tablas.css">
+    <link rel="stylesheet" href="../styles/formularios.css">
 </head>
 <body>
     <aside>
-        <img src="#" alt="logotipo">
+        <!--<img src="#" alt="logotipo"> -->
         <nav>
         <ul>
             <li><a href="admin_gph.html" class="lateral">
@@ -40,7 +41,7 @@
     <main>
         <form action="" id="busquedas">
             <h2>Clientes</h2>
-                <button class="bot"><span class="material-symbols-outlined">
+            <button class="bot" type="button" onclick="addpopup()"><span class="material-symbols-outlined">
                 add_circle
                 </span> Añadir</button>
                 <div id="barra_busqueda">
@@ -72,5 +73,29 @@
         </table>
     </main>
     
+    <div id="Popup">
+        <form action="" id="cliente" class="modificacion">
+            <h2>Formulario Clientes</h2>
+            <button id="salirP" type="button" onclick="colapsePopup()">X</button>
+                <input type="text" class="tercio" name="NombreC" placeholder="Nombre(s)">
+                <input type="text" class="tercio" name="PaternoC" placeholder="Apellido Paterno">
+                <input type="text" class="tercio" name="MaternoC" placeholder="Apellido Materno">
+            <input type="text" class="medio" name="telefonoC" placeholder="teléfono" required>
+            <input type="text" class="medio" name="correoC" placeholder="correo">
+            <div id="contDicc"></div>
+            <button type="button" class="full" id="B_direcciones" onclick="agregarDireccion()">Añadir dirección</button>
+
+            <input type="submit" class="cuarto" value="Enviar">
+        </form>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.js-example-basic-single').select2();
+        });
+    </script>
+    <script src="../js/formulario.js"></script>
 </body>
 </html>
