--- a/integradora/index.html
+++ b/integradora/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/login.css">
 
 </head>
 <body>
@@ -12,7 +12,7 @@
         <h2 class="fuente">Iniciar sesión</h2>
         <input class="sesion" type="text" placeholder="Usuario">
         <input class="sesion" type="password" placeholder="Contraseña">
-        <input type="submit" class="boton" value="ingresar">
+        <a href="resourses/main.html" class="boton">Entrar</a>
         <a href="">haz olvidado tu contraseña?</a>
     </form>
 </body>
