--- a/integradora/resourses/admin_gph.html
+++ b/integradora/resourses/admin_gph.html
@@ -3,16 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Graficas</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../styles/lateral.css">
+    <link rel="stylesheet" href="../styles/graficas.css">
 </head>
 <body>
     <aside>
-        <!--<img src="#" alt="logotipo"> -->
+        <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
         <nav>
         <ul>
-            <li><a href="#" class="lateral selected">
+            <li><a href="main.html" class="lateral">
+            <span class="material-symbols-outlined">
+                checklist
+                </span>
+            <span class="tooltip">tabla ordenes</span>
+            </a></li>
+            <li><a href="crearOrden.html" class="lateral">
+                <span class="material-symbols-outlined">
+                    edit_square
+                </span>
+                <span class="tooltip">crear Orden</span>
+                </a></li>
+            <li><a href="admin_gph.html" class="lateral selected">
                 <span class="material-symbols-outlined">query_stats</span>
                 <span class="tooltip">estadísticas</span>
                 </a></li>
@@ -34,19 +47,40 @@
             </a></li>
         </ul>
         </nav>
+        <button id="user">
+        <span class="material-symbols-outlined">
+            account_circle
+        </span>
+        <span class="tooltip">usuario</span>
+        </button>
     </aside>
     
     <main>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A iusto, consectetur nesciunt minus harum dolorem quod cum hic explicabo eligendi et, culpa facilis officia repudiandae praesentium. Fugit eos animi quis.</p>
-        <p>Ipsa quis illum voluptate laborum nam perspiciatis, obcaecati consequatur dignissimos cumque illo quaerat magnam, odit quas sunt adipisci ab culpa quia ut. Laboriosam necessitatibus eos reiciendis, blanditiis architecto consequuntur reprehenderit!</p>
-        <p>Consequatur fugit error deserunt non molestiae sed aliquam perferendis ea aut in. Sit voluptates facilis labore vero nostrum? Doloremque corporis commodi incidunt sint totam numquam fuga officia reiciendis sit explicabo.</p>
-        <p>Atque, eum repudiandae. Delectus qui laboriosam facilis sint eum dicta ratione? Inventore, non ipsa. Error, architecto in! Tempore, libero ad sint natus reprehenderit accusamus, obcaecati rem quod, cupiditate quaerat quae!</p>
-        <p>Id, odio ea dignissimos dolores odit quo. Eligendi, eos doloremque? Ipsum magnam, excepturi esse hic error dolorum ipsam, modi officia eligendi voluptatum incidunt unde, ducimus sunt nihil quo. Quisquam, velit!</p>
-        <p>Architecto iusto at nemo deleniti porro sit vel, alias ab! Velit omnis quidem reprehenderit ipsum quasi suscipit dolore eum laudantium necessitatibus. Consequatur mollitia necessitatibus nostrum vero omnis, optio officiis animi?</p>
-        <p>Quas nihil nulla, dolore sequi quia distinctio at ab recusandae saepe, id sed optio! Officia nostrum earum tempore perspiciatis culpa delectus, non incidunt, voluptatem possimus autem praesentium, ipsum iste deleniti.</p>
-        <p>Id sequi possimus fuga voluptatibus aliquid? Vitae harum id eaque animi qui culpa, accusantium voluptates facilis magni. Temporibus, ea ratione, suscipit tempora itaque nulla harum optio nihil, doloribus voluptatibus porro!</p>
-        <p>Eius omnis suscipit blanditiis mollitia, maxime quae voluptatum natus iste consequatur deleniti quam obcaecati! Sint ducimus iure officiis eaque culpa perferendis veritatis. Tenetur ullam provident est ducimus dolorum nemo error.</p>
-        <p>Nostrum architecto ipsa maxime omnis repudiandae aliquam suscipit alias provident. Culpa necessitatibus quo expedita quas, ab modi earum aperiam velit quam iusto, facere sit sed ipsum nam doloremque exercitationem laborum!</p>
+        <h2>Gráficas</h2>
+
+            <div class="grafica">
+                <canvas id="clientes"></canvas>
+            </div>
+            <div class="grafica">
+                <canvas id="ventas"></canvas>
+            </div>
+            <div class="grafica">
+                <canvas id="empleados"></canvas>
+            </div>
+            <div class="grafica">
+                <canvas id="masVendidos" ></canvas>
+            </div>
+
+
     </main>
+
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="../js/graficas.js"></script>
 </body>
 </html>
