--- a/integradora/resourses/admin_gph.html
+++ b/integradora/resourses/admin_gph.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/lateral.css">
     <link rel="stylesheet" href="../styles/graficas.css">
 </head>
-<body>
+<body style="border-top: 10px solid #8B2437;">
     <aside>
         <!--<a href="" id="logotipo"><span class="tooltip">Inicio</span> logo </a> -->
         <nav>
