editar orden-detalles

--- a/integradora/resourses/direcciones.html
+++ b/integradora/resourses/direcciones.html
@@ -35,7 +35,9 @@
                         <option value="WY">Wyoming</option>
                     </select>
                     <input id="Search_principal" type="search" placeholder="Buscar">
-                    <input id="Bot_busqueda"  class="botS" type="submit" value="buscar">
+                    <button id="Bot_busqueda" class="botS"><span class="material-symbols-outlined">
+                        search
+                        </span></button>
                 </div>
         </form>
 
