--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -16,17 +16,17 @@
     <nav>
     <ul>
         <li><a href="main.html" class="lateral selected">
-          <span class="material-symbols-outlined">
+        <span class="material-symbols-outlined">
             checklist
             </span>
-          <span class="tooltip">tabla ordenes</span>
-          </a></li>
+        <span class="tooltip">tabla ordenes</span>
+        </a></li>
         <li><a href="crearOrden.html" class="lateral">
-              <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined">
                 edit_square
-              </span>
-              <span class="tooltip">crear Orden</span>
-              </a></li>
+            </span>
+            <span class="tooltip">crear Orden</span>
+            </a></li>
         <li><a href="admin_gph.html" class="lateral">
             <span class="material-symbols-outlined">query_stats</span>
             <span class="tooltip">estadísticas</span>
@@ -50,103 +50,125 @@
     </ul>
     </nav>
     <button id="user">
-      <span class="material-symbols-outlined">
+    <span class="material-symbols-outlined">
         account_circle
-      </span>
-      <span class="tooltip">usuario</span>
+    </span>
+    <span class="tooltip">usuario</span>
     </button>
 </aside>
 
-    <main>
+  <main>
       <form action="" id="busquedas">
-        <h2>Ordenes</h2>
-        <button class="bot" type="button" onclick="addpopup()"><span class="material-symbols-outlined">
-            add_circle
-            </span> Añadir</button>
-        <div id="barra_busqueda">
-            <select class="js-example-basic-single" name="state">
-                <option value="" selected disabled>categoría</option>
-                <option value="AL">Alabama</option>
-                <option value="WY">Wyoming</option>
-            </select>
-            <input id="Search_principal"  type="search" placeholder="Buscar">
-            <button id="Bot_busqueda" class="botS"><span class="material-symbols-outlined">
-              search
-              </span></button>
-        </div>
-    </form>
-    <table>
-        <thead>
-          <tr>
-            <th>Encargado</th>
-            <th>Cliente</th>
-            <th>Dirección</th>
-            <th>fecha</th>
-            <th>hora</th>
-            <th>Estado</th>
-            <th>Total</th>
-            <th>Pago</th>
-            <th>información</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-          <tr>
-            <td id="encargado1">Juan Pérez</td>
-            <td id="cliente1">Juan Pérez</td>
-            <td id="direccion1">Calle Falsa 123</td>
-            <td id="fecha1">20/10/20024</td>
-            <td id="hora1">10:30</td>
-            <td id="estado1" class="positive"> completado</td>
-            <td id="total1">$100.00</td>
-            <td id="Tpago1">pago</td>
-            <td>
-              <button id="detalle" class="ver" >detalle</button>
-            </td>
-            <td id="acciones" >
-              <button class="completar"><span class="material-symbols-outlined">
-                task_alt
-                </span></button>
-              <button class="proceso"><span class="material-symbols-outlined">
-                acute
-                </span></button>
-              <button class="cancelado"><span class="material-symbols-outlined">
-                block
-                </span></button>
-            </td>
-          </tr>
-          <tr>
-            <td id="encargado1">Juan Pérez</td>
-            <td id="cliente1">Juan Pérez</td>
-            <td id="direccion1">Calle Falsa 123</td>
-            <td id="fecha1">20/10/20024</td>
-            <td id="hora1">10:30</td>
-            <td id="estado1" class="negative"> cancelado</td>
-            <td id="total1">$100.00</td>
-            <td id="Tpago1">pago</td>
-            <td>
-              <button id="detalle" class="ver" >detalle</button>
-            </td>
-            <td id="acciones" >
-              <button class="completar"><span class="material-symbols-outlined">
-                task_alt
-                </span></button>
-              <button class="proceso"><span class="material-symbols-outlined">
-                acute
-                </span></button>
-              <button class="cancelado"><span class="material-symbols-outlined">
-                block
-                </span></button>
-            </td>
-          </tr>
-      </table>
-    </main>
+          <h2>Ordenes</h2>
+          <a href="crearOrden.html" class="bot" type="button"><span class="material-symbols-outlined">add_circle</span> Añadir</a>
+          <div id="barra_busqueda">
+              <select class="js-example-basic-single" name="state">
+                  <option value="" selected disabled>categoría</option>
+                  <option value="AL">Alabama</option>
+                  <option value="WY">Wyoming</option>
+              </select>
+              <input id="Search_principal" type="search" placeholder="Buscar">
+              <button id="Bot_busqueda" class="botS"><span class="material-symbols-outlined">search</span></button>
+          </div>
+      </form>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('.js-example-basic-single').select2();
-        });
-    </script>
+      <table>
+          <thead>
+              <tr>
+                  <th>Encargado</th>
+                  <th>Cliente</th>
+                  <th>Dirección</th>
+                  <th>Fecha</th>
+                  <th>Hora</th>
+                  <th>Estado</th>
+                  <th>Total</th>
+                  <th>Pago</th>
+                  <th>Información</th>
+                  <th>Acciones</th>
+              </tr>
+          </thead>
+          <tbody id="ordenes-body">
+              <!-- Aquí se insertarán las filas dinámicamente -->
+          </tbody>
+      </table>
+
+      <div id="pagination-controls-ordenes" class="pagination-container"></div>
+
+  </main>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+  <script>
+      $(document).ready(function() {
+          $('.js-example-basic-single').select2();
+          fetchOrdenes(); // Cargar las órdenes al iniciar
+      });
+
+      const NpaginaOrdenes = 20; // Número de elementos por página
+      let NumpagOrden = 1; // Página inicial
+      let ordenesData = []; // Arreglo para almacenar los datos de órdenes
+
+      function fetchOrdenes() {
+          fetch('https://latosca.up.railway.app/ordenes')
+              .then(response => response.json())
+              .then(ordenes => {
+                  ordenesData = ordenes; // Guardamos los datos en una variable global
+                  renderOrdenesTable();
+                  renderOrdenesPaginationControls();
+              })
+              .catch(error => console.error('Error al cargar las órdenes:', error));
+      }
+
+      function renderOrdenesTable() {
+          const start = (NumpagOrden - 1) * NpaginaOrdenes;
+          const end = start + NpaginaOrdenes;
+          const ordenesToShow = ordenesData.slice(start, end); // Paginación de registros
+
+          let ordenesHTML = '';
+          ordenesToShow.forEach((orden) => {
+              ordenesHTML += `
+                  <tr>
+                      <td>${orden.ID_Empleados || 'N/A'}</td> <!-- Suponiendo que "ID_Empleados" es el encargado -->
+                      <td>${orden.ID_cliente || 'N/A'}</td> <!-- Suponiendo que "ID_cliente" es el cliente -->
+                      <td>${orden.ID_detalle || 'N/A'}</td> <!-- Suponiendo que "ID_detalle" representa la dirección -->
+                      <td>${orden.Fecha ? orden.Fecha.split('T')[0] : 'N/A'}</td> <!-- Solo fecha -->
+                      <td>${orden.Hora || 'N/A'}</td>
+                      <td class="${orden.Estatus === 'activo' ? 'positive' : 'negative'}">${orden.Estatus}</td>
+                      <td>${orden.Precio_total || 'N/A'}</td>
+                      <td>${orden.tipo_pago || 'N/A'}</td>
+                      <td><a href="detalles.html" class="ver">detalle</a></td>
+                      <td id="acciones">
+                          <button class="completar"><span class="material-symbols-outlined">task_alt</span></button>
+                          <button class="proceso"><span class="material-symbols-outlined">acute</span></button>
+                          <button class="cancelado"><span class="material-symbols-outlined">block</span></button>
+                      </td>
+                  </tr>
+              `;
+          });
+
+          document.getElementById("ordenes-body").innerHTML = ordenesHTML;
+      }
+
+      function renderOrdenesPaginationControls() {
+          const totalPages = Math.ceil(ordenesData.length / NpaginaOrdenes);
+          let paginationHTML = '';
+
+          for (let i = 1; i <= totalPages; i++) {
+              paginationHTML += `<button onclick="goToOrdenesPage(${i})" class="pagination-button ${i === NumpagOrden ? 'active' : ''}">${i}</button>`;
+          }
+
+          document.getElementById("pagination-controls-ordenes").innerHTML = paginationHTML;
+      }
+
+      function goToOrdenesPage(page) {
+          NumpagOrden = page;
+          renderOrdenesTable();
+          renderOrdenesPaginationControls();
+      }
+
+      // Llamar a la función para cargar las órdenes y configurar la paginación
+      fetchOrdenes();
+
+  </script>
 </body>
 </html>
