--- a/integradora/resourses/cambioRecu.html
+++ b/integradora/resourses/cambioRecu.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <form id="login">
-        <h2 class="fuente">Colocar los datos</h2>
-        <input class="sesion" id="userRec" type="text" placeholder="Usuario">
+        <h2 class="fuente">actualiza Contraseña</h2>
+        <input class="sesion" type="text" placeholder="Nueva contraseña">
+        <input class="sesion" type="text" placeholder="coloca otra vez la contraseña">
+
         <button onclick="recuperacion()" class="boton">Enviar correo</button>
     </form>
     <script src="../js/script.js"></script>
