--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -168,7 +168,8 @@
 
       // Llamar a la función para cargar las órdenes y configurar la paginación
       fetchOrdenes();
-
   </script>
+    <script src="../js/script.js"></script>
+
 </body>
 </html>
