--- a/integradora/resourses/empleados.html
+++ b/integradora/resourses/empleados.html
@@ -188,5 +188,7 @@
     <div id="upPopup" class="Popup"></div>
 
     <script src="../js/formulario.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 </html>
