--- a/integradora/resourses/recuperacion.html
+++ b/integradora/resourses/recuperacion.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperacion de Contraseña</title>
     <link rel="stylesheet" href="../styles/login.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script>
+        (function(){
+            emailjs.init("5WABFrWbtCu1Va4P5"); // Reemplaza "YOUR_USER_ID" con tu ID de usuario de EmailJS
+        })();
+    </script>
 
 </head>
 <body>
-    <form id="login">
+    <div id="login">
         <h2 class="fuente">Colocar los datos</h2>
         <input class="sesion" id="userRec" type="text" placeholder="Usuario">
         <button onclick="recuperacion()" class="boton">Enviar correo</button>
-    </form>
+    </div>
     <script src="../js/script.js"></script>
 </body>
 </html>
