funcion añadir clientes y direccion

--- a/integradora/resourses/empleados.html
+++ b/integradora/resourses/empleados.html
@@ -168,14 +168,14 @@
 
     <!-- Formulario de Popup -->
     <div id="addPopup" class="Popup">
-        <form action="" class="modificacion" id="empleados">
+        <form action="" class="modificacion" id="empleadoForm">
             <h2>Formulario Empleado</h2>
             <button id="salirP" type="button" onclick="colapsePopup('addPopup')">X</button>
         
-            <input type="text" class="tercio" name="NombreC" placeholder="Nombre(s)">
-            <input type="text" class="tercio" name="PaternoC" placeholder="Apellido Paterno">
-            <input type="text" class="tercio" name="MaternoC" placeholder="Apellido Materno">
-            <select class="medio" name="cargo" id="cargo">
+            <input type="text" class="tercio" name="Nombres" placeholder="Nombre(s)">
+            <input type="text" class="tercio" name="Apellido_P" placeholder="Apellido Paterno">
+            <input type="text" class="tercio" name="Apellido_M" placeholder="Apellido Materno">
+            <select class="medio" name="Cargo" id="cargo">
                 <option value="cargo" selected disabled>Cargo</option>
                 <option value="empleado">Empleado</option>
                 <option value="admin">Admin</option>
