--- a/integradora/index.html
+++ b/integradora/index.html
@@ -13,7 +13,7 @@
         <input class="sesion" type="text" placeholder="Usuario">
         <input class="sesion" type="password" placeholder="Contraseña">
         <a href="resourses/main.html" class="boton">Entrar</a>
-        <a href="resourses/recuperacion.html">haz olvidado tu contraseña?</a>
+<!--         <a href="resourses/recuperacion.html">haz olvidado tu contraseña?</a> -->
     </form>
 </body>
 </html>
